--- a/deeplearning4j-scaleout/deeplearning4j-nlp/pom.xml
+++ b/deeplearning4j-scaleout/deeplearning4j-nlp/pom.xml
@@ -15,10 +15,18 @@
 	</properties>
 
 
+	<repositories>
+	    <repository>
+	      <id>ironiacorp.com</id>
+	      <url>http://www.ironiacorp.com/repo/maven2/</url>
+	    </repository>
+	 </repositories>
 
 	<artifactId>deeplearning4j-nlp</artifactId>
 	<dependencyManagement>
 		<dependencies>
+			
+
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-beans</artifactId>
@@ -125,6 +133,11 @@
             <artifactId>jblas</artifactId>
             <version>1.2.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>edu.smu.tspell.wordnet</groupId>
+        	<artifactId>jaws</artifactId>
+        	<version>1.3.3</version>
         </dependency>
 	</dependencies>
 </project>
