--- a/deeplearning4j-scaleout/deeplearning4j-nlp/pom.xml
+++ b/deeplearning4j-scaleout/deeplearning4j-nlp/pom.xml
@@ -15,17 +15,9 @@
 	</properties>
 
 
-	<repositories>
-	    <repository>
-	      <id>ironiacorp.com</id>
-	      <url>http://www.ironiacorp.com/repo/maven2/</url>
-	    </repository>
-	 </repositories>
-
 	<artifactId>deeplearning4j-nlp</artifactId>
 	<dependencyManagement>
 		<dependencies>
-			
 
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -135,9 +127,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-        	<groupId>edu.smu.tspell.wordnet</groupId>
-        	<artifactId>jaws</artifactId>
-        	<version>1.3.3</version>
+        	<groupId>edu.mit</groupId>
+        	<artifactId>jwi</artifactId>
+        	<version>2.2.3</version>
         </dependency>
 	</dependencies>
 </project>
